src/Components/comment/write-comment/write-comment.styles.scss
@import '../../../layout.scss';
@import '../../../colors.scss';

.write-comment {
  @include v-center();
  padding: 10px;

  .input {
    @include fr-h-sb();
    @include v-center();
    width: 100%;
    min-height: 40px;
    margin-left: 10px;
    background-color: $bg-primary-color;
    border-radius: 20px;
    padding: 0 10px;
    

    textarea {
      width: 100%;
      border: 0;
      outline: 0;
      height: auto;
      background-color: inherit;
      display: inline-block;
    }
  }
}

